--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-It's a website for getting things done.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>luogugu.debug</title>
+  </head>
+  <body>
+    <h1>luogugu</h1>
+    <p>debug</p>
+  </body>
+</html>
